[project]
name = "pylimit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "redis>=7.3.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.135.1",
]
django = [
    "django>=5.2.12",
    "djangorestframework>=3.16.1",
]
