[project]
name = "pylimitx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "redis>=7.3.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.135.1",
]
django = [
    "django>=5.2.12",
    "djangorestframework>=3.16.1",
]

[dependency-groups]
dev = [
    "fakeredis>=2.34.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options] 
asyncio_mode = "auto"
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "tests.django_settings"
django_find_project = false

[tool.hatch.build.targets.wheel]
packages = ["pylimitx"]
